--- a/03_스프링MVC1편_백엔드웹개발핵심/item-service/src/main/resources/templates/basic/item.html
+++ b/03_스프링MVC1편_백엔드웹개발핵심/item-service/src/main/resources/templates/basic/item.html
@@ -47,7 +47,8 @@
             <button class="w-100 btn btn-secondary btn-lg"
                     onclick="location.href='items.html'"
                     th:onclick="|location.href='@{/basic/items}'|"
-                    type="button">목록으로</button>
+                    type="button">목록으로
+            </button>
         </div>
     </div>
 </div> <!-- /container -->
